2001-11-19  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (parse_bool)  Move code to
	Mj::Util::str_to_bool for external use.
	(parse_delivery_rules)  Bugfix:  rearrange loops.  Thanks
	to Roger Klorese.

	* lib/Mj/Format.pm:  (configshow)  Format boolean settings
	separately.  Thanks to Gavin Walker.

	* lib/Mj/Util.pm:  (str_to_bool)  New routine.  Convert
	a string to a true or false value (1 or 0).

2001-11-18  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/Resend.pm (_check_poster): Get post stats and fill in
	access variables.

	* lib/Mj/List.pm (post_gen_stats): New function: generate
	statistics from post data.

	* lib/Mj/CommandProps.pm: Add new post-related access variables.

2001-11-13  Michael Yount <csf@moscow.com>

	* bin/mj_confirm, mj_wwwadm:  Add support for the tokeninfo-part 
	commands, including the ability to display message parts with their
	appropriate content types.  This makes it possible to display
	images and other parts inline or in separate browser windows.

	* bin/mj_shell:  Automatically invoke an editor for the
	tokeninfo-part-edit command.

	* bin/mj_wwwusr:  Always validate the password during to the login
	process.  Thanks to Roger Klorese.

	* lib/Majordomo.pm:  Version number is now 0.1200111130.
	(dispatch)  Make mode checking stricter, including tests
	for incompatible modes and missing prerequisites.
	(sessioninfo_start)  Cease dealing with message spool files.
	The tokeninfo-full command is no longer supported.
	(tokeninfo_start)  The tokeninfo command is now iterated.
	Iteration allows the contents of message parts to be obtained
	in chunks.  Add support for the tokeninfo "part" modes:
	part, part-delete, part-edit, and part-replace, which deal
	with body parts of moderated messages and their headers.
	(_get_msg_data)  Obtain or alter a table of entities within 
	a moderated message and return the revised table.  Each entity 
	is numbered, which allows parts to be altered or removed using 