@@ -156,6 +156,9 @@ The post command also uses these variables:
   posts_last_24hours		number
   posts_last_7days		number
   posts_last_30days		number
+  posts_this_month		number
+  posts_this_week		number
+  posts_today			number
   quoted_lines                  number
   taboo                         number
   total_header_length           number
@@ -420,6 +423,16 @@ posts_last_7days
 posts_last_30days
   These variables contain the number of posts the user has made within the
   specified time periods, including the current message.
+
+posts_this_day
+posts_this_week
+posts_this_month
+  These variables contain the number of posts the user has made since the
+  beginning of the current day, week and month, respectively.  A week
+  begins on Sunday.  Note the difference between these and the previous
+  three variables: if it is 5PM, a post made at 8PM the previous day will
+  be counted in $posts_last_24hours but not in $posts_this_day because it
+  occurred before midnight on the current day.
 
 quoted_lines
   This variable contains the number of lines in a posted message that 
