@@ -616,8 +616,11 @@ my %commands =
                     'post_block'                   => 'bool',
 		    'posts'                        => 'integer',
 		    'posts_last_24hours'           => 'integer',
-		    'posts_last_7days'           => 'integer',
-		    'posts_last_30days'           => 'integer',
+		    'posts_last_7days'             => 'integer',
+		    'posts_last_30days'            => 'integer',
+		    'posts_this_day'               => 'integer',
+		    'posts_this_week'              => 'integer',
+ 		    'posts_this_month'             => 'integer',
                     'quoted_lines'                 => 'integer',
                     'taboo'                        => 'integer',
                     'total_header_length'          => 'integer',
